fix: adjust height of image elements and increase h1 font size for better visibility

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -107,7 +107,7 @@ body {
 
         .computer {
           width: 100%;
-          height: 100px;
+          height: 200px;
         }
 
         .evandrometz {
@@ -121,7 +121,7 @@ body {
       }
 
       h1 {
-        font-size: 2.5rem;
+        font-size: 3rem;
       }
 
       h2 {
